--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 * {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -39,6 +46,12 @@ html {
 
 #title {
     color: white;
+}
+
+#fullName,
+#contactEmail,
+#message {
+    width: 16.5rem;
 }
 
 #nav-items a {
@@ -209,7 +222,9 @@ html {
     display: -ms-grid;
     display: grid;
     width: 16.8rem;
-    height: 23rem;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
     -webkit-box-shadow: 5px 5px 15px 2px rgba(0, 0, 0, 0.5);
             box-shadow: 5px 5px 15px 2px rgba(0, 0, 0, 0.5);
     gap: 0.5rem;
